# 5DataGlowUp_lvgalvaofilho

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  utils.md
docs/reports/: sweetviz_report.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/search/: search_index.json
src/eda/: pandas_profile.py  sweetviz_profile.py
src/frontend/: main.py  requirements.txt  view.py
src/pipeline/: extract.py  main.py  transformation.py
src/query/: select.py
src/sql/: select.sql
src/utils/: my_encoding.py
utils/: index.html
