[tool.poetry]
name = "5dataglowup-lvgalvaofilho"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "5dataglowup_lvgalvaofilho" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
chardet = "^5.2.0"
polars = "^0.19.8"
ydata-profiling = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
