[tool.poetry]
name = "5dataglowup-lvgalvaofilho"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "5dataglowup_lvgalvaofilho" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
chardet = "^5.2.0"
polars = "^0.19.8"
ydata-profiling = "^4.6.0"
mkdocs = "^1.5.3"
pymdown-extensions = "^10.3"
mkdocs-material = "^9.4.6"
pygments = "^2.16.1"
mkdocstrings-python = "^1.7.3"
taskipy = "^1.12.0"
black = "^23.9.1"
isort = "^5.12.0"
sweetviz = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]

format = "poetry run black . && poetry run isort ."
kill = "kill -9 $(lsof -t -i :8000)"
serve = "poetry run mkdocs serve"
test = "poetry run pytest -v"
